# actionlab-ablation-runner-v2

./: .gitignore  README.md  config.yaml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
src/actionlab_ablation_runner/: __init__.py  cli.py  orchestrator.py  schemas.py
src/actionlab_ablation_runner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/actionlab_ablation_runner/api/: app.py
src/actionlab_ablation_runner/engine/: config.py  executor.py  generator.py  stats.py
src/actionlab_ablation_runner/paper/: typst_writer.py
src/actionlab_ablation_runner/research/: clients.py  pipeline.py
src/actionlab_ablation_runner/utils/: logging.py  retry.py
tests/integration/: test_live_research_apis.py
tests/statistical/: test_bootstrap_stats.py
tests/unit/: test_generator_deterministic.py
