[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "actionlab-ablation-runner"
version = "0.1.0"
description = "Deterministic, extensible ablation experimentation engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "ActionLab"}]
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.2",
  "tenacity>=8.2",
  "httpx>=0.27",
  "typer>=0.12",
  "rich>=13.7",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5",
  "pip-audit>=2.7",
  "cyclonedx-bom>=4.1",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "types-PyYAML>=6.0",
]

[project.scripts]
actionlab = "actionlab_ablation_runner.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["actionlab_ablation_runner"]

[[tool.mypy.overrides]]
module = ["yaml", "pandas", "pandas.*", "scipy", "scipy.*"]
ignore_missing_imports = true

